Fix some issues Henrik found, and implement some of his suggestions:
* Fix ancestor stacking
* Suppress x-axis labels that overlap with others
* Make bars clickable links
 - Legacy-Id: 10590

--- a/ietf/static/ietf/css/ietf.css
+++ b/ietf/static/ietf/css/ietf.css
@@ -443,6 +443,7 @@ form.navbar-form input.form-control.input-sm { width: 141px; }
 #timeline .bar text {
     fill: white;
     dominant-baseline: central;
+    pointer-events: none;
 }
 
 /* like label-success */
